# nelson-gitbook

./: .bookignore  .gitignore  COM examples.md  COM_get.md  COM_isprop.md  COM_methods.md  COM_set.md  COM_used.md  COM_xlsfinfo.md  COM_xlsread.md  COM_xlswrite.md  Cargo.toml  IJV.md  LANGS.md  MPI_Barrier.md  MPI_Comm_size.md  MPI_Comm_split.md  MPI_Get_library_version.md  MPI_Init.md  MPI_Initialized.md  MPI_Send.md  NaN.md  QObject_classname.md  QObject_get.md  QObject_iswidgettype.md  QObject_iswindowtype.md  QObject_methodsignature.md  QObject_undefine.md  README.md  SUMMARY.md  acos.md  actxGetRunningSrv.md  actxcontrollist.md  addgateway.md  addmodule.md  addpath.md  all.md  and.md  argv.md  assert.md  (+233 more)
_book/: COM examples.html  COM_delete.html  COM_fieldnames.html  COM_get.html  COM_invoke.html  COM_ismethod.html  COM_isprop.html  COM_methods.html  COM_range.html  COM_set.html  COM_used.html  COM_xlsfinfo.html  COM_xlsread.html  COM_xlswrite.html  IJV.html  Inf.html  MPI_Allreduce.html  MPI_Barrier.html  MPI_Bcast.html  MPI_Comm_delete.html  MPI_Comm_get_name.html  MPI_Comm_object.html  MPI_Comm_rank.html  MPI_Comm_size.html  MPI_Comm_split.html  MPI_Comm_used.html  MPI_Finalize.html  MPI_Get_library_version.html  MPI_Get_processor_name.html  MPI_Get_version.html  MPI_Init.html  MPI_Initialized.html  MPI_Iprobe.html  MPI_Probe.html  MPI_Recv.html  MPI_Reduce.html  MPI_Send.html  MPI_examples.html  MPI_overview.html  NaN.html  (+440 more)
assert_functions/: README.md  assert_checkerror.md  chapter_assert_functions.md  index.md
audio/: README.md  audiometadata.md  index.md  (+10 more)
(+15775 files in other folders)
