
[package]
name = "nelson-gitbook"
version = "1.15.0"
edition = "2021"
description = "Nelson language documentation book"
authors = ["Allan CORNET"]
license = "LGPL-3.0"
repository = "https://github.com/nelson-lang/nelson-gitbook"

[dependencies]

[build-dependencies]
mdbook = "0.4.47"
mdbook-katex = "0.9.4"
